[tool.poetry]
name = "mgn-ec2-launchtemplate-editor"
version = "1.0.0"
description = "Launch template editor for AWS Migration Manager"
authors = ["David Cunliffe <dcunliffe@2ndwatch.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.29.3"

[tool.poetry.group.dev.dependencies]
boto3 = "^1.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
